--- a/BlazorTool.Client/Pages/OrdersPage.razor
+++ b/BlazorTool.Client/Pages/OrdersPage.razor
@@ -98,6 +98,7 @@ else
 {
     <TelerikGrid Data="@OrderDevicesForGrid"
                  Id="Grid1"
+                 Class="orders-grid"
                  RowDraggable="false"
                  @ref="@GridRef"
                  Sortable="true"
