--- a/BlazorTool.Client/Pages/OrdersPage.razor.css
+++ b/BlazorTool.Client/Pages/OrdersPage.razor.css
@@ -1,13 +1,7 @@
-﻿
-.filter-controls-row {
-    display: flex;
-    align-items: flex-end;
-    gap: 1rem;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-content: flex-end;
-    justify-content: flex-start;
-    background-color: antiquewhite;
-    margin-bottom: 10px;
-    padding-bottom: 13px;
+::deep .orders-grid .k-grid-table tr {
+    border-bottom: 2px solid #808080;
+}
+
+::deep .orders-grid .k-grid-table td {
+    padding: 4px 12px;
 }
