--- a/BlazorTool.Client/Components/CheckSession.razor
+++ b/BlazorTool.Client/Components/CheckSession.razor
@@ -21,7 +21,7 @@
         else
         {
             Logger.LogWarning("User is not authenticated, redirecting to login page.");
-            Navigation.NavigateTo("/login", forceLoad: true);
+            Navigation.NavigateTo("/login", forceLoad: true, replace: true);
         }
     }
     private async Task checkSession()
