--- a/BlazorTool.Client/Pages/OrdersPage.razor
+++ b/BlazorTool.Client/Pages/OrdersPage.razor
@@ -105,24 +105,99 @@ else
                  Resizable="true"
                  Pageable="true"
                  PageSize="20"
+                 FilterMode="@GridFilterMode.FilterMenu"
                  OnRowRender="@OnRowRenderHandler"
                  OnRowDoubleClick="@OnRowClick"
                      >
-        <GridSettings>
-        </GridSettings>
+        <GridToolBarTemplate>
+            <GridSearchBox Width="200px"/>
+        </GridToolBarTemplate>
         <GridColumns>
             <GridColumn Field="@nameof(WorkOrderView.WorkOrderID)" Editable="false" Visible="false"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.DepName)" Title="DepName" Resizable="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.DeviceName)" Title="Device" Resizable="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.DeviceCategory)" Resizable="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.WOReason)" Resizable="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.ModPerson)" Resizable="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.WOState)" Resizable="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.WOLevel)" Resizable="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.AssignedPerson)" Title="AssignedPerson" Resizable="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.AddDate)" Resizable="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.StartDate)" Title="Start Date" Resizable="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.EndDate)" Title="End Date" Resizable="true"></GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.DepName)" Title="DepName" Resizable="true">
+        <FilterMenuTemplate>
+                    <CustomFilterMenuTemplate Values="@dicts.Where(d => d.ListType == (int)WOListTypeEnum.Department).Select(d => d.Name).Distinct()"
+                                              context="@context"
+                                              NameOfField="@nameof(WorkOrderView.DepName)">
+                    </CustomFilterMenuTemplate>
+        </FilterMenuTemplate>
+    </GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.DeviceName)" Title="Device" Resizable="true" Filterable="false"></GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.DeviceCategory)" Resizable="true" Filterable="false"></GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.WOReason)" Resizable="true">
+                <FilterMenuTemplate>
+                    <CustomFilterMenuTemplate Values="@dicts.Where(d => d.ListType == (int)WOListTypeEnum.Reason).Select(d => d.Name).Distinct()"
+                                              context="@context"
+                                              NameOfField="@nameof(WorkOrderView.WOReason)">
+                    </CustomFilterMenuTemplate>
+                </FilterMenuTemplate>
+            </GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.ModPerson)" Resizable="true">
+                <FilterMenuTemplate>
+                    <CustomFilterMenuTemplate Values="@allPersons.Select(x => x.Name).ToList()"
+                                              context="@context"
+                                              NameOfField="@nameof(WorkOrderView.ModPerson)">
+                    </CustomFilterMenuTemplate>
+                </FilterMenuTemplate>
+            </GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.AssignedPerson)" Resizable="true">
+        <FilterMenuTemplate>
+            <CustomFilterMenuTemplate Values="@allPersons.Select(x=>x.Name).ToList()"
+                                      context="@context"
+                                      NameOfField="@nameof(WorkOrderView.AssignedPerson)">
+            </CustomFilterMenuTemplate>
+        </FilterMenuTemplate>
+    </GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.WOState)" Resizable="true">
+        <FilterMenuTemplate>
+                    <CustomFilterMenuTemplate Values="@workOrderStates"
+                                      context="@context"
+                                      NameOfField="@nameof(WorkOrderView.WOState)">
+                    </CustomFilterMenuTemplate>
+        </FilterMenuTemplate>
+    </GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.WOLevel)" Resizable="true">
+        <FilterMenuTemplate>
+            <CustomFilterMenuTemplate Values="@dicts.Where(d => d.ListType == (int)WOListTypeEnum.Level).Select(d => d.Name).Distinct()"
+                                      context="@context"
+                                      NameOfField="@nameof(WorkOrderView.WOLevel)">
+                    </CustomFilterMenuTemplate>
+        </FilterMenuTemplate>
+    </GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.AddDate)" Resizable="true">
+                <FilterMenuButtonsTemplate Context="filterContext">
+                    <div class="vertical-stack-container">
+
+                        <div class="stack-item">
+                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Primary" OnClick="@(async _ => await filterContext.FilterAsync())">Filter </TelerikButton>
+                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Info" OnClick="@(() => ClearFilterAsync(filterContext))">Clear</TelerikButton>
+                        </div>
+                        <div class="stack-item">
+                            <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "AddDate", "year"))">Last Year</TelerikButton>
+                            <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "AddDate", "quarter"))">Quarter</TelerikButton>
+                            <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "AddDate", "month"))">Month</TelerikButton>
+                        </div>
+                    </div>
+
+                </FilterMenuButtonsTemplate>
+    </GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.StartDate)" Title="Start Date" Resizable="true">
+       <FilterMenuButtonsTemplate Context="filterContext">
+           <div class="vertical-stack-container">
+
+                        <div class="stack-item">
+                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Primary" OnClick="@(async _ => await filterContext.FilterAsync())">Filter </TelerikButton>
+                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Info" OnClick="@(() => ClearFilterAsync(filterContext))">Clear</TelerikButton>
+                    </div>
+                        <div class="stack-item">
+                    <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "StartDate", "year"))">Last Year</TelerikButton>
+                    <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "StartDate", "quarter"))">Quarter</TelerikButton>
+                    <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "StartDate", "month"))">Month</TelerikButton>
+                        </div>
+                    </div>
+        </FilterMenuButtonsTemplate>
+    </GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.EndDate)" Resizable="true"></GridColumn>
             <GridColumn Field="@nameof(WorkOrderView.CloseDate)" Resizable="true"></GridColumn>
         </GridColumns>
     </TelerikGrid>
@@ -506,4 +581,37 @@ else
     }
     #endregion
 
+    private async Task FilterByDateRange(Telerik.Blazor.Components.FilterMenuTemplateContext context, string field, string range)
+    {
+        DateTime now = DateTime.Now;
+        DateTime from = now;
+        switch (range)
+        {
+            case "year":
+                from = now.AddYears(-1);
+                break;
+            case "quarter":
+                from = now.AddMonths(-3);
+                break;
+            case "month":
+                from = now.AddMonths(-1);
+                break;
+        }
+        var filterDescriptor = context.FilterDescriptor;
+        filterDescriptor.FilterDescriptors.Clear();
+        filterDescriptor.LogicalOperator = Telerik.DataSource.FilterCompositionLogicalOperator.And;
+        filterDescriptor.FilterDescriptors.Add(new FilterDescriptor()
+        {
+            Member = field,
+            Operator = Telerik.DataSource.FilterOperator.IsGreaterThanOrEqualTo,
+            MemberType = typeof(DateTime),
+            Value = from
+        });
+        await context.FilterAsync();
+    }
+
+    private async Task ClearFilterAsync(FilterMenuTemplateContext filterContext)
+    {
+        await filterContext.ClearFilterAsync();
+    }
 }
