--- a/BlazorTool/wwwroot/app.css
+++ b/BlazorTool/wwwroot/app.css
@@ -114,3 +114,17 @@ h1:focus {
 .bg-gray-light {
     background-color: #aaaaaa !important;
 }
+
+.vertical-stack-container {
+    display: flex; 
+    flex-direction: column; 
+    align-items:center;
+    width: 100%; 
+    gap: 0.2rem; 
+}
+
+.stack-item {
+    border: 1px solid #ccc;
+    padding: 0.2rem;
+    border-radius: 8px;
+}
