remove old filters

--- a/BlazorTool.Client/Pages/OrdersPage.razor
+++ b/BlazorTool.Client/Pages/OrdersPage.razor
@@ -57,7 +57,7 @@
         >
         </TelerikComboBox>
     </div>
-    <div>
+        @*<div>
         <label>Device type</label>
         <TelerikComboBox Data="@deviceTypes" TextField="DeviceType"
                             @bind-Value="@selectedDeviceType"   
@@ -66,7 +66,7 @@
         </TelerikComboBox>
     </div>
     <div>
-        <label>Order state</label>
+         <label>Order state</label>
         <TelerikComboBox Data="@workOrderStates"
                          @bind-Value = "@selectedState"
                          Placeholder="Select state..."
@@ -85,7 +85,7 @@
                                 Width="300px"
                                 TagMode="@TagMode">
         </TelerikMultiSelect>
-    </div>
+    </div> *@
 </div>
 }
 
