fix async bug (infinity loading Scheduler first run)

--- a/BlazorTool.Client/Components/ActivityList.razor
+++ b/BlazorTool.Client/Components/ActivityList.razor
@@ -46,6 +46,7 @@
         if (WorkOrderId > 0)
         {
             activities = await ApiClient.GetActivityByWO(WorkOrderId);
+            activities.Sort((x, y) => x.AddDate.CompareTo(y.AddDate));
         }
     }
 }
