--- a/BlazorTool.Client/Pages/OrdersPage.razor.css
+++ b/BlazorTool.Client/Pages/OrdersPage.razor.css
@@ -1,7 +1,7 @@
-::deep .orders-grid .k-grid-table tr {
-    border-bottom: 2px solid #808080;
+::deep .orders-grid .k-master-row tr {
+    border-bottom: 2px solid #808080; 
 }
 
-::deep .orders-grid .k-grid-table td {
+::deep .orders-grid .k-master-row td {
     padding: 4px 12px;
 }
