--- a/BlazorTool.Client/Pages/Login.razor
+++ b/BlazorTool.Client/Pages/Login.razor
@@ -44,6 +44,7 @@
 </div>
 
 @code {
+
     private string Username { get; set; } = string.Empty;
     private string Password { get; set; } = string.Empty;
     private string ErrorMessage { get; set; } = string.Empty;
@@ -80,7 +81,10 @@
                 var identityData = response.Data;
                 UserState.UserName = identityData.Name;
                 UserState.Token = identityData.Token;
-                UserState.Password = Password; // Save password to UserState for token refresh
+                UserState.Password = Password;
+                UserState.LangCode = identityData.LangCode;
+                UserState.UseOriginalColors = bool.TryParse(await ApiServiceClient.LoadSettingAsync("useOriginalColors", identityData.Name), out var useColors) && useColors;
+                identityData.UseOriginalColors = UserState.UseOriginalColors;
                 await UserState.SaveIdentityDataAsync(identityData); // Save identityData to local storage
 
                 Navigation.NavigateTo("/");
