--- a/BlazorTool.Client/Components/WorkOrderComponent.razor
+++ b/BlazorTool.Client/Components/WorkOrderComponent.razor
@@ -298,9 +298,9 @@
     {
         isNewWorkOrder = WorkOrder?.WorkOrderID == 0;
         ListDevices = await apiService.GetAllDevicesCachedAsync();
-        ListCategories = await apiService.GetWOCategories(currentUser?.PersonId ?? 1);
-        ListLevels = await apiService.GetWOLevels(currentUser?.PersonId ?? 1);
-        ListDepartments = (await apiService.GetWODepartments(currentUser?.PersonId ?? 1)).Select(c=>c.Name).ToList();
+        ListCategories =  apiService.GetWOCategories();
+        ListLevels =  apiService.GetWOLevels();
+        ListDepartments =  apiService.GetWODepartments().Select(c=>c.Name).ToList();
         StateColor = await apiService.GetStateColor(WorkOrder?.WorkOrderID);
         if (isNewWorkOrder) {
             WorkOrder.EndDate = WorkOrder.StartDate?.AddHours(1);
