--- a/BlazorTool.Client/Pages/Login.razor
+++ b/BlazorTool.Client/Pages/Login.razor
@@ -86,7 +86,7 @@
                 UserState.UseOriginalColors = bool.TryParse(await ApiServiceClient.LoadSettingAsync("useOriginalColors", identityData.Name), out var useColors) && useColors;
                 identityData.UseOriginalColors = UserState.UseOriginalColors;
                 await UserState.SaveIdentityDataAsync(identityData); // Save identityData to local storage
-
+                await ApiServiceClient.GetWODictionaries(identityData.PersonID, identityData.LangCode);
                 Navigation.NavigateTo("/");
             }
             else
